# fluon_refsrv

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  app.py  docker-compose.prod.yaml  docker-compose.yaml  package.json  pyproject.toml  requirements.txt  tailwind.config.js  wsgi.py
data/: kg_final.txt  mf.npz  model.pth  test.txt  train.txt
fo_services/: LDAPAuthClient.py  __init__.py  api_app_v1.py  api_maintenance_v1.py  app_test_v1.py  app_v1.py  auth.py  db.py  db_models.py  ldap.py  page_auth.py  page_clustervis.py
fo_services/assets/: main.scss
fo_services/config/: schema.sql
fo_services/kgstuff/: __init__.py
fo_services/models/: User.py  __init__.py
fo_services/templates/: _base.html
fo_services/templates/clustervis/: inspect.html
src/: wsgi.py
src/blueprints/dashboard/: dashboard.py
src/fo_services/: LDAPAuthClient.py  __init__.py  api_app_v1.py  api_maintenance_v1.py  db.py  page_auth.py  page_clustervis.py
src/fo_services/assets/: fonts.scss  main.scss
src/fo_services/blueprints/: dashboard.py  users.py
src/fo_services/cli/: update_model.py
src/fo_services/client/: api_clients.py
src/fo_services/config/: .gitignore  ldap.toml.dist
src/fo_services/kgstuff/: __init__.py
src/fo_services/models/: __init__.py
src/fo_services/services/: updater.py
src/fo_services/static/: main.css
src/fo_services/templates/: _base.html
src/fo_services/templates/auth/: login.html  user_create.html
src/fo_services/templates/user/: _form.html  index.html  new.html  show.html
tests/: conftest.py  data.sql  ldap.toml  test_auth.py  test_factory.py  test_ldapclient.py
