[tool.poetry]
name = "fo_services"
version = "0.1.0"
description = ""
authors = ["Oliver Baumann <oliver.baumann@uni-bayreuth.de>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "<3.0.0"
ldap3 = "^2.9.1"
flask-restx = "^1.2.0"
Flask-HTTPAuth = "^4.8.0"
pytest = "^7.4.3"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['fo_services']