[tool.poetry]
name = "fo_services"
version = "0.1.0"
description = ""
authors = ["Oliver Baumann <oliver.baumann@uni-bayreuth.de>"]
license = "Proprietary"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "<3.0.0"
ldap3 = "^2.9.1"
flask-restx = "^1.2.0"
Flask-HTTPAuth = "^4.8.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"

pandas = "^2.2.2"
uwsgi = "^2.0.25.1"
joblib = "^1.4.2"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
matplotlib = "^3.9.0"
[tool.pyright]
venvPath = "/home/ob/000JD/302 DMWG/30-39 Code/302.32__fo_services"
venv = ".venv"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['fo_services']
